<resources>
    <string name="app_name">BB Play</string>
    <string name="name_cafe">BB Play</string>
    <string name="full_name_cafe" translatable="false">Black Bears Play</string>
    <string name="log_in">Войти</string>
    <string name="phone_text">Телефон</string>
    <string name="email_text">Почта</string>
    <string name="email_error_input">Неверный адрес почты</string>
    <string name="password_text">Пароль</string>
    <string name="nickname">Логин</string>
    <string name="first_name_text">Имя</string>
    <string name="second_name_text">Фамилия</string>
    <string name="date_of_birth_text">Дата рождения</string>
    <string name="time_text">Время</string>
    <string name="game_zone_text" translatable="false">Game Zone</string>
    <string name="boot_camp_text" translatable="false">Boot Camp</string>
    <string name="nickname_info">Никнейм виден другим игрокам</string>
    <string name="phone_info">Телефон используется для входа</string>
    <string name="choose_text">Выбрать</string>
    <string name="excellent_text">Отлично</string>
    <string name="log_out"><u>Выйти</u></string>
    <string name="empty_text" translatable="false"> </string>
    <string name="show_balance">%d руб</string>
    <string name="price_text">%s руб</string>
    <string name="text_format_with_two_params" translatable="false">%s %s</string>
    <string name="wrong_text">Что-то не так, попробуйте позже</string>
    <string name="logout_text_message">Мы добавили новые возможности в приложении, пожалуйста, войдите заново</string>
    <string name="profile_text">Профиль</string>
    <string name="news_text">Новости</string>
    <string name="clubs_text">Клубы</string>
    <string name="events_text">Ивенты</string>
    <string name="booking_text">Бронь</string>
    <string name="no_account_text">Нет аккаунта?\t\t<font color="#08D424"><u>Создать</u></font></string>
    <string name="forgot_your_password"><u>Забыли пароль?</u></string>
    <string name="new_account_text">Новый аккаунт</string>
    <string name="do_you_have_acc">Есть аккаунт?\t\t<font color="#08D424"><u>Войти</u></font></string>
    <string name="agree_with_terms_of_use">Создавая аккаунт вы принимаете\n<font><u>условия использования</u></font></string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="password_info">Пароль нужен для входа</string>
    <string name="terms_of_use_link" translatable="false">https://bbplay.bbgms-api.com/legal/ru/terms</string>
    <string name="no_browser_warning">Невозможно открыть. Пожалуйста, установите браузер.</string>
    <string name="hello">Привет, </string>
    <string name="table">Таблица\nлидеров</string>
    <string name="сups">Кубки</string>
    <string name="bonus">Бонусные рубли</string>
    <string name="balance">Баланс</string>
    <string name="pay">Пополнить</string>
    <string name="show_hi">Привет, %s</string>
    <string name="enter_code">Введите код из СМС</string>
    <string name="code_sent_info">На номер %s было отправлено сообщение с кодом. Введите его ниже.</string>
    <string name="code_not_received"><font><u>Не пришел код</u></font></string>
    <string name="time_to_request_code_again"><font><u>Повторная отправка %s</u></font></string>
    <string name="continue_verification">Продолжить</string>
    <string name="settings_text">Настройки</string>
    <string name="personal_info_text">Персональная информация</string>
    <string name="change_password_text">Сменить пароль</string>
    <string name="password_change_success" translatable="false">Password changed successful</string>
    <string name="grid_text" translatable="false">#</string>
    <string name="save">Сохранить</string>
    <string name="first_three_rank_name" translatable="false">%s\n%s\n%s</string>
    <string name="win_text">Победы</string>
    <string name="losses_text">Поражения</string>
    <string name="kills_text">Убийства</string>
    <string name="deaths_text">Смерти</string>
    <string name="assists_text">Помощь</string>
    <string name="kdr_text" translatable="false">KDR</string>
    <string name="wins_ratio_text">Коэфф. выигрышей</string>
    <string name="top_5_text">Топ 5</string>
    <string name="top_10_text">Топ 10</string>
    <string name="top_25_text">Топ 25</string>
    <string name="points_text">Очки</string>
    <string name="new_club">Новый клуб</string>
    <string name="job_review">Отзыв о работе</string>
    <string name="soon">скоро</string>
    <string name="join">Вступить</string>
    <string name="address">Адрес</string>
    <string name="address_text">Тамбов, Советская 121</string>
    <string name="phone_number" translatable="false">+7 (4752) 55-85-52</string>
    <string name="vk">ВКонтакте</string>
    <string name="vk_text" translatable="false">vk.com/bbplay_tmb</string>
    <string name="error_phone">"Проблема с открытием телефона"</string>
    <string name="error_location">"Проблема с открытием локации"</string>
    <string name="error_vk">"Проблема с открытием сайта vk.com"</string>
    <string name="error_email">"Проблема с открытием почтового клиента"</string>
    <string name="terms_and_prices_text"><u>Условия и цены</u></string>
    <string name="choice_club_text">Выбери клуб</string>
    <string name="choice_date_text">Выбери дату</string>
    <string name="choice_time_text">Выбери время</string>
    <string name="choice_club_description_text">Выбери в каком клубе\nзабронировать компьютер</string>
    <string name="choice_date_description_text">Выбери дату, когда хочешь\nзабронировать место</string>
    <string name="choice_time_description_text">Выбери время и\nпродолжительность</string>
    <string name="my_bookings_text">Мои брони</string>
    <string name="to_book_text">Бронировать</string>
    <string name="address_one_text">BBPlay\n<font color="#4A5A6B">%s</font></string>
    <string name="address_two_text">Новый клуб</string>
    <string name="technical_break_text">Технический перерыв 09:00–10:00</string>
    <string name="morning_time_text" translatable="false">09:00-13:00</string>
    <string name="night_time_text" translatable="false">21:00-09:00</string>
    <string name="one_hour_text">1 час</string>
    <string name="morning_text">Утро</string>
    <string name="three_hours_text">3 часа</string>
    <string name="five_hours_text">5 часов</string>
    <string name="night_text">Ночь</string>
    <string name="choice_place_text">Выбери место</string>
    <string name="free_pc_text">Свободно</string>
    <string name="busy_pc_text">Занято</string>
    <string name="selected_pc_text">Выбрано</string>
    <string name="disabled_pc_text">Недоступен</string>
    <string name="package_text_with_slash">/ Пакет</string>
    <string name="morning_text_with_slash">/ Утро</string>
    <string name="night_text_with_slash">/ Ночь</string>
    <string name="booking_success_text">Бронирование\nзавершено</string>
    <string name="booking_success_text_descr">Выбранный компьютер будет ждать тебя в указанное время. Хорошей игры! 💚</string>
    <string name="need_log_in">Необходимо войти в аккаунт</string>
    <string name="minutes_text">%d мин</string>
    <string name="text_in_two_lines" translatable="false">%s\n%s</string>
    <string name="date_text_in_booking_format" translatable="false">%s, %d %s</string>
    <string name="price_format_in_booking_time_fragment" translatable="false">%s %s %s</string>
    <string name="time_and_price_format" translatable="false">%s, на %s %s</string>
    <string name="booking_button_format">%s место, на %s\nОплатить %s руб.</string>
    <string name="user_booking_date_format" translatable="false">%s, %d %s %s</string>
    <string name="user_booking_pc_name_format">Место %s</string>
    <string name="pc_is_not_free_now">Выбранный компьютер уже занят</string>
    <plurals name="hours_plurals">
        <item quantity="one">%d час</item>
        <item quantity="few">%d часа</item>
        <item quantity="many">%d часов</item>
    </plurals>
    <string name="password_recovery">Восстановление\nпароля</string>
    <string name="password_recovery_text">Для восстановления пароля от своего аккаунта вам необходимо лично связаться с администраторами клуба</string>
    <string name="understand">Понятно</string>
    <string name="bonuses">Бонусные рубли</string>
    <string name="enter_your_email">Введите ваш email</string>
    <string name="bonuses_text">Все новости про бонусную программу будут в нашей группе ВКонтакте vk.com/bbplay_tmb</string>
    <string name="confirm_email_description">Мы будем отправлять на него чек после оплаты для соблюдения закона.</string>
    <string name="pay_text">Пополнить баланс</string>
    <string name="replenish_text">Пополнить</string>
    <string name="input_help_pay">Минимальное пополнение 100 руб</string>
    <string name="one_hundred_text" translatable="false">100.00</string>
    <string name="two_hundred_rubles">200.00 руб</string>
    <string name="three_hundred_rubles">300.00 руб</string>
    <string name="four_hundred_rubles">400.00 руб</string>
    <string name="something_wrong_text">Что-то не так. Попробуйте позже.</string>
    <string name="unknown_payment_text">Неизвестный способ оплаты</string>
    <string name="pay_balance">Пополнить баланс</string>
    <string name="ym_app_scheme" translatable="false">android.bbplay</string>
    <string name="payment_process_text">Платеж\nобрабатывается</string>
    <string name="description_payment_process_text">После обработки платежа деньги сразу поступят на баланс</string>
    <string name="payment_fail_text">Платеж\nне обработан</string>
    <string name="description_payment_fail_text">Возникли проблемы с обработкой платежа</string>
    <string name="payment_success_text">Платеж\nобработан</string>
    <string name="description_payment_success_text">Платеж успешно обработан. Баланс пополнен</string>
    <string name="payment_loading_status">Идет процесс\nоплаты</string>
    <string name="review">Оставить отзыв</string>
    <string name="imnut_review">Введите отзыв</string>
    <string name="send">Отправить</string>
    <string name="email" translatable="false">bbplay_tmb@blackbears.mobi</string>
    <string name="how_join_text">Как присоединиться?</string>
    <string name="join_description_text">1. Арендуйте любой игровой компьютер в клубе\n2. В главном меню системы зайдите на вкладку Турниры и выберите там раздел Активные\n3. Выберите Турнир, к которому хотите присоединиться из списка активных турниров\n4. Нажмите кнопку Присоединиться, чтобы участвовать в турнире\n5. Примите Условия предоставления услуг\n6. Поздравляем! Вы участвуете в Турнире</string>
    <string name="join_text_detail_info_text">Подробную информацию можно получить у операторов клуба!</string>
    <string name="wrong_code_header">Неверный\nкод</string>
    <string name="wrong_code_text">Введен неверный код из СМС. Попробуйте еще раз</string>
    <string name="number_not_confirmed_header">Номер\nне подтвержден</string>
    <string name="number_not_confirmed_text">Невозможно использовать функционал приложения без подтверждения номера</string>
    <string name="number_not_confirmed_log_out">Выйти</string>
    <string name="number_not_confirmed_back">Назад</string>
    <string name="bonus_banner_description">Получи бонус при первом\nпополнении через СБП</string>
    <string name="bonus_banner_header_value">Пополнение</string>
    <string name="bonus_banner_header_bonus">Бонус</string>
    <string name="bonus_banner_line1_value">> 300 ₽</string>
    <string name="bonus_banner_line2_value">> 1 000 ₽</string>
    <string name="bonus_banner_line3_value">> 5 000 ₽</string>
    <string name="bonus_banner_line4_value">> 10 000 ₽</string>
    <string name="bonus_banner_line1_bonus">100 ₽</string>
    <string name="bonus_banner_line2_bonus">300 ₽</string>
    <string name="bonus_banner_line3_bonus">1 000 ₽</string>
    <string name="bonus_banner_line4_bonus">3 000 ₽</string>
</resources>