<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_item"
        android:icon="@drawable/ic_profile_menu"
        android:title="@string/profile_text" />

    <item
        android:id="@+id/news_item"
        android:icon="@drawable/ic_news_menu"
        android:title="@string/news_text"/>

    <item
        android:id="@+id/clubs_item"
        android:icon="@drawable/ic_clubs_menu"
        android:title="@string/clubs_text" />

    <item
        android:id="@+id/events_item"
        android:icon="@drawable/ic_events_menu"
        android:title="@string/events_text" />

    <item
        android:id="@+id/booking_item"
        android:icon="@drawable/ic_booking_menu"
        android:title="@string/booking_text" />
</menu>