<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectangle_grey"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/din_round_pro_bold"
        android:text="@string/bonus_banner_description"
        android:textColor="@color/green_light_success"
        android:textAlignment="center"
        android:textSize="@dimen/bonus_banner_description_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/din_round_pro_bold"
        android:text="@string/bonus_banner_header_value"
        android:textColor="@color/white"
        android:textSize="@dimen/bonus_banner_header_text_size"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_center"
        app:layout_constraintStart_toStartOf="@id/line1"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/bonus_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/din_round_pro_bold"
        android:text="@string/bonus_banner_header_bonus"
        android:textColor="@color/white"
        android:textSize="@dimen/bonus_banner_header_text_size"
        app:layout_constraintEnd_toEndOf="@id/line1"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_center"
        app:layout_constraintTop_toTopOf="@id/value_header"
        app:layout_constraintBottom_toBottomOf="@id/value_header" />


    <mobi.blackbears.bbplay.screens.profile.ui.bonusbanner.BonusBannerLine
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bonus_banner_header_margin_top"
        app:bonusAmount="@string/bonus_banner_line1_bonus"
        app:bonusAmountBgColor="@color/green_spring"
        app:bonusAmountTextColor="@color/lime_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value_header"
        app:valueName="@string/bonus_banner_line1_value" />

    <mobi.blackbears.bbplay.screens.profile.ui.bonusbanner.BonusBannerLine
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bonus_banner_line_margin_top"
        app:bonusAmount="@string/bonus_banner_line2_bonus"
        app:bonusAmountBgColor="@color/green_leapfrog"
        app:bonusAmountTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:valueName="@string/bonus_banner_line2_value" />

    <mobi.blackbears.bbplay.screens.profile.ui.bonusbanner.BonusBannerLine
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bonus_banner_line_margin_top"
        app:bonusAmount="@string/bonus_banner_line3_bonus"
        app:bonusAmountBgColor="@color/gold_ore"
        app:bonusAmountTextColor="@color/pineapple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:valueName="@string/bonus_banner_line3_value" />

    <mobi.blackbears.bbplay.screens.profile.ui.bonusbanner.BonusBannerLine
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bonus_banner_line_margin_top"
        app:valueName="@string/bonus_banner_line4_value"
        app:bonusAmount="@string/bonus_banner_line4_bonus"
        app:bonusAmountBgColor="@color/ginger"
        app:bonusAmountTextColor="@color/lime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>