<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="37dp"
    android:paddingBottom="51dp"
    tools:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/din_round_pro_bold"
        android:text="@string/name_cafe"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_address_prises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/din_round_pro_medium"
        android:textColor="@color/grey_light"
        android:textSize="16sp"
        android:text="@string/address_text" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingTop="32dp"
        android:paddingBottom="8dp">

        <TextView
            android:fontFamily="@font/din_round_pro_bold"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/time_text"
            android:textAllCaps="true"
            android:textColor="@color/grey_light"
            android:textSize="14sp" />

        <TextView
            android:fontFamily="@font/din_round_pro_bold"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/game_zone_text"
            android:textAllCaps="true"
            android:textColor="#09FFA2"
            android:textSize="14sp" />

        <TextView
            android:fontFamily="@font/din_round_pro_bold"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/boot_camp_text"
            android:textAllCaps="true"
            android:textColor="#FF00BD"
            android:textSize="14sp" />
    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_for_prises"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:overScrollMode="never"
        android:layout_marginHorizontal="24dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_price_one" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/din_round_pro_medium"
        android:text="@string/technical_break_text"
        android:textColor="@color/grey_light"
        android:visibility="gone"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_ok_prises"
        style="@style/BBPlay.PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/understand" />
</LinearLayout>