<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="53dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_number_not_confirmed" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/din_round_pro_bold"
        android:gravity="center"
        android:text="@string/number_not_confirmed_header"
        android:textColor="@color/bb_red_error"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/din_round_pro_medium"
        android:gravity="center"
        android:text="@string/number_not_confirmed_text"
        android:textColor="@color/grey_900"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_log_out"
        style="@style/BBPlay.ButtonLogout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:text="@string/number_not_confirmed_log_out" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_back"
        style="@style/BBPlay.ButtonBack"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/number_not_confirmed_back" />
    
</LinearLayout>
