<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="41dp"
        android:paddingBottom="43dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din_round_pro_bold"
            android:gravity="center"
            android:text="@string/how_join_text"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/din_round_pro_medium"
            android:text="@string/join_description_text"
            android:textColor="@color/grey_light"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/din_round_pro_medium"
            android:gravity="center"
            android:text="@string/join_text_detail_info_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok_in_join_event"
            style="@style/BBPlay.PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:text="@string/understand" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>