<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp">

    <TextView
        android:id="@+id/bonuses_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/din_round_pro_bold"
        android:gravity="center"
        android:text="@string/bonuses"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/bonuses_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/din_round_pro_medium"
        android:gravity="center"
        android:text="@string/bonuses_text"
        android:textColor="@color/grey_400"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_clear_bonuses"
        style="@style/BBPlay.PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="43dp"
        android:text="@string/understand" />


</LinearLayout>
