<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <TextView
        android:id="@+id/tv_wrong_code_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/din_round_pro_bold"
        android:gravity="center"
        android:text="@string/wrong_code_header"
        android:textColor="@color/bb_red_error"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tv_wrong_code_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/din_round_pro_medium"
        android:gravity="center"
        android:text="@string/wrong_code_text"
        android:textColor="@color/grey_900"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_ok"
        style="@style/BBPlay.PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="43dp"
        android:text="@string/understand" />

</LinearLayout>
