<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp"
    tools:background="@color/background">

    <TextView
        android:id="@+id/password_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/din_round_pro_bold"
        android:gravity="center"
        android:text="@string/password_recovery"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/password_recovery_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/din_round_pro_medium"
        android:gravity="center"
        android:text="@string/password_recovery_text"
        android:textColor="@color/grey_400"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_recovery_password_ok"
        style="@style/BBPlay.PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="43dp"
        android:text="@string/understand" />
</LinearLayout>